# weather_call

./: .gitignore  README.md  main.py  pyproject.toml
src/weather_call/: __init__.py  config.py  etl_service.py  main.py  reports.py
src/weather_call.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/weather_call/api/: city_location.py  hour_weather.py
src/weather_call/model/: city.py  country.py  database.py  initial_database.py  weather.py
src/weather_call/schema/: city.py  country.py  weather.py
