[project]
name = "weather-call"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Lorenzo Colpani", email = "l.g.colpani@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
  "polars>=1.35.2",
  "pydantic>=2.12.4",
  "pydantic-settings>=2.12.0",
  "requests>=2.32.5",
  "sqlalchemy>=2.0.44",
]

[project.scripts]
weather-call = "weather_call.main:main"

[tool.uv]
package = true
